# discord-bot

./: .gitignore  README.md  requirements.txt  setup.cfg
dao/: schedule_url_dao.py
mirea-schedule/: main.py
mirea-schedule/dao/: schedule_dao.py  schedule_url_dao.py
mirea-schedule/resources/: institutes_courses.txt  ИИТ_1 курс_21-22_весна_очка.xlsx  ИИТ_3 курс_21-22_весна_очка.xlsx
mirea-schedule/services/: schedule_service.py  schedule_url_service.py
mirea-schedule/utils/: excel_parser.py  url_html_parser.py
services/: schedule_url_service.py
utils/: url_html_parser.py
