[metadata]
name = mirea-schedule
version = 0.0.1
author = vitaliks007, KitsunIvy
author_email = svitalik2002@gmail.com, kitsunivy@gmail.com
description = Discord bot for checking RTU MIREA schedule
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vitaliks007/mirea-schedule
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.7, <4
install_requires = 
    bs4
    hikari
    mysql-connector-python
    pandas
    requests
    wget